@@ -25,3 +25,4 @@ depth: 1
  * Resolve issue where searches with a tag and a query param in the image listing would result in an `FilterFieldError` (Stefan Hammer)
  * Add missing vertical space between header and content in embed chooser modal (LB (Ben) Johnston)
  * Use the correct type scale for heading levels in rich text (Steven Steinwand)
+ * Update alignment and reveal logic of fields’ comment buttons (Steven Steinwand)
